updates api routes v1/todos
