# backend/src/routes.js
@@ -2,12 +2,12 @@ const express = require("express");
 const router = express.Router();
 const controller = require("./controller");
 
-// Contact APIs > contactController
-router.post("/user", controller.create);
-router.get("/user/:email", controller.read); // Anything after colon is our variable that we use in the controller
-router.get("/user", controller.readAll);
-router.put("/user/:email", controller.update); // Anything after colon is our variable that we use in the controller
-router.delete("/user/:email", controller._delete); // Anything after colon is our variable that we use in the controller
+// APIs > Controller
+router.post("/v1/todos", controller.create);
+router.get("/v1/todos/:email", controller.read); // Anything after colon is our variable that we use in the controller
+router.get("/v1/todos", controller.readAll);
+router.put("/v1/todos/:email", controller.update); // Anything after colon is our variable that we use in the controller
+router.delete("/v1/todos/:email", controller._delete); // Anything after colon is our variable that we use in the controller
 
 //Healthcheck
 router.get("/healthcheck", (req, res) => {
